<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_page"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_main_page" />
        <item
            android:id="@+id/nav_menu_payment_history"
            android:icon="@drawable/ic__wallet_black_24dp"
            android:title="@string/menu_payment_history" />
        <item
            android:id="@+id/nav_repost"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_repost" />
        <item
            android:id="@+id/nav_warehouse"
            android:icon="@drawable/ic_warehouse_black_24dp"
            android:title="@string/menu_warehouse" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
    android:id="@+id/nav_support"
    android:icon="@drawable/ic_headset_mic_black_24dp"
    android:title="@string/menu_support"/>
    </group>


</menu>
