<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/login_page_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="70dp"
            android:background="#27B474"
            android:text="@string/login_btn_text"
            android:textColor="#FAFAFA"
            android:textColorHighlight="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_hint_id" />

        <EditText
            android:id="@+id/password_hint_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="70dp"
            android:hint="@string/password_hint_txt"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_hint_id"

            />


        <EditText
            android:id="@+id/email_hint_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="80dp"
            android:layout_marginRight="70dp"
            android:hint="@string/email_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enlightening_uzbekistan_id" />

        <ImageView
            android:id="@+id/support_image_id"
            android:layout_width="27dp"
            android:layout_height="31dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@id/techSupport"

            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_headset_mic_black_24dp" />

        <TextView
            android:id="@+id/enlightening_uzbekistan_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enlightening_uzbekistan_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enlightening_life_id" />

        <TextView
            android:id="@+id/uzPos_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/uzpos_text"
            android:textColor="#27B474"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/forgot_password_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="@string/forgot_password_text"
            android:textColor="#27B474"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_hint_id" />

        <TextView
            android:id="@+id/enlightening_life_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enlightening_life_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uzPos_textView" />

        <TextView
            android:id="@+id/www_aleinsoft_uz_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/www_aliensoft_uz_text"
            android:textColor="#27B474"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@+id/phone_number_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="30dp"
            android:text="@string/phone_number_text"

            app:layout_constraintBottom_toTopOf="@id/www_aleinsoft_uz_id"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@+id/techSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/techsupport_aliensoft_uz_text"
            app:layout_constraintBottom_toTopOf="@id/phone_number_id"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/support_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/support_text"
            android:textColor="#27B474"
            app:layout_constraintBottom_toTopOf="@id/techSupport"
            app:layout_constraintStart_toEndOf="@id/support_image_id" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>