<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/category_branch_ver_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2375" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryBranchRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/category_branch_ver_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/category_branch_category_image"
        android:layout_width="80dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/category_branch_category_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="Овощи и фрукты"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@id/category_branch_ver_guideline"
        app:layout_constraintStart_toEndOf="@id/category_branch_category_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_branch_category_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/category_branch_category_description_text"
        app:layout_constraintEnd_toStartOf="@id/category_branch_ver_guideline"
        app:layout_constraintStart_toEndOf="@id/category_branch_category_image"
        app:layout_constraintTop_toBottomOf="@+id/category_branch_category_name" />

    <TextView
        android:id="@+id/textView_categories"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="33dp"
        android:background="#F5F5F5"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/categories_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/category_branch_ver_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_branch_category_image"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/radioButton_all_products"
        android:layout_width="wrap_content"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/vse_produkti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_categories"
        />

    <RadioButton
        android:id="@+id/radioButton_ovovshi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ovoshi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton_all_products" />

    <RadioButton
        android:id="@+id/radioButton_frukti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/frukti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton_ovovshi" />

    <RadioButton
        android:id="@+id/radioButton_zelen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/zelen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton_frukti" />

    <RadioButton
        android:id="@+id/radioButton_suxofrukti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/suxofrukti_orexi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton_zelen" />

    <TextView
        android:id="@+id/textView_tipi_razdelov"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="33dp"
        android:background="#F5F5F5"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="Типы разделов"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/category_branch_ver_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton_suxofrukti"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:id="@+id/checkBox_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_tipi_razdelov"
        />

    <CheckBox
        android:id="@+id/checkBox_bestsellers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Бестселлеры"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_news"
        android:layout_margin="16dp"/>

    <CheckBox
        android:id="@+id/checkBox_skidki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skidki"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_bestsellers"
        android:layout_margin="16dp"/>

    <CheckBox
        android:id="@+id/checkBox_akcii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aksii"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_skidki"
        android:layout_margin="16dp"
        />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="50dp"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>